@@ -10,7 +10,7 @@ binmode(STDOUT, ':utf8');
 binmode(STDERR, ':utf8');
 # We must declare in advance how many tests we are going to perform.
 # There are currently three tests per tagset driver.
-use Test::More tests => 41*3;
+use Test::More tests => 42*3;
 use Lingua::Interset qw(get_driver_object);
 use Lingua::Interset::Tagset;
 
@@ -42,6 +42,7 @@ my @tagsets =
     'mul::google', 'mul::upos',
     'nl::cgn', 'nl::conll',
     'no::conll',
+    'pl::ipipan',
     'pt::cintil',
     'sv::mamba', 'sv::conll', 'sv::parole', 'sv::suc'
 );
